--- a/blocks/cover/__content/cover__content.css
+++ b/blocks/cover/__content/cover__content.css
@@ -1,9 +1,12 @@
 .cover__content{
+    background-image: url(../../../images/__background.png);
+    max-width: 80%;
     padding: 200px;
-    display: block;
+    margin-right: 100px;
+    background-size: cover;
 }
 
-@media screen and (min-width: 320px) and (max-width: 767px){
+@media screen and (min-width: 320px) and (max-width: 768px){
     .cover__content{
         padding: 320px;
         
