--- a/blocks/lead/lead.css
+++ b/blocks/lead/lead.css
@@ -1,10 +1,13 @@
-.lead{      
-    margin-top: 91px;    
-}
+.lead{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    }
 
-@media screen and (min-width:320px) and (max-width:767px) {
+
+
+@media screen and (min-width:320px) and (max-width:768px) {
     .lead{
         margin-top: 50px;
-       
     }
 }
