--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -1,22 +1,22 @@
 
 .photo-grid{  
-    width: 1184px;
     height: 440px;
     display: grid;
     grid-template-columns: repeat(4, auto); 
-    grid-row-gap:10px;
+    grid-gap: 10px;
     margin-left: 50px;
+    margin-right: 50px;
     margin-top: 30px;
 }
 
-@media screen and (min-width: 320px) and (max-width: 767px){
+@media screen and (min-width: 320px) and (max-width: 768px){
     .photo-grid{
-        width: 600px;
+        width: 100%;
         height: 280px;
         display: grid;
         grid-template-columns: repeat(2, auto); 
         grid-template-rows: repeat(2, auto);
-        grid-row-gap:10px;
+        grid-gap: 10px;
         margin-left: 570px;
     }
 }
