--- a/blocks/cover/__content/__button/cover__content-button.css
+++ b/blocks/cover/__content/__button/cover__content-button.css
@@ -16,3 +16,9 @@
     transition: 1s;
     cursor: pointer;
   }
+
+  @media screen and (min-width:320px) and (max-width:768px){
+    .cover__content-button{
+     
+    }
+  }
