--- a/blocks/cover/__content/__subtitle/cover__content-subtitle.css
+++ b/blocks/cover/__content/__subtitle/cover__content-subtitle.css
@@ -8,3 +8,10 @@
     display: block;
     position: relative;
   }
+
+  
+  @media screen and (min-width:320px) and (max-width:768px){
+    .cover__content-subtitle{
+     
+    }
+  }
