--- a/blocks/grande/__grande/grande__grande.css
+++ b/blocks/grande/__grande/grande__grande.css
@@ -1,21 +1,15 @@
-.grande{   
+.grande{ 
     background-color: #2A2C2F; 
-     align-content: center;
- 
+    align-content: center;
+    flex-direction: column;
  }
- @media screen and (min-width:320px) and (max-width:768px) 
- {
+ @media screen and (min-width:320px) and (max-width:768px) {
      .grande{       
          max-width:fit-content;  
+         
              
       }     
  }
- 
- @media screen and (min-width:768px) and (max-width:1280px) {
-     .grande{
-         max-width:fit-content;  
-        
-      }     
- }
+
  
  
