--- a/blocks/intro/__subtitle/intro__subtitle.css
+++ b/blocks/intro/__subtitle/intro__subtitle.css
@@ -1,16 +1,17 @@
 .intro__subtitle{
-    width: 720px;
     font-weight: 400;
     font-size: 24px;
     line-height: 34px;
     color: #FFFFFF;
-    text-align: right;    
+    text-align: center;    
 }
 
-@media screen and (min-width: 320px) and (max-width: 767px){
+@media screen and (min-width: 320px) and (max-width: 768px){
     .intro__subtitle{
        font-size: 20px;
-       font-weight: 200px;
-       margin-left: 200px;
+       font-weight: 200;
+       text-align: end;
+       margin-top: 50px;
+ 
     }
 }
