--- a/blocks/intro/__title/intro__title.css
+++ b/blocks/intro/__title/intro__title.css
@@ -11,6 +11,8 @@
     .intro__title{
         font-size: 40px;
         font-weight: 600;
+        max-width: fit-content;
+       
      
     }
 }
