--- a/blocks/lead/lead.css
+++ b/blocks/lead/lead.css
@@ -8,6 +8,6 @@
 
 @media screen and (min-width:320px) and (max-width:768px) {
     .lead{
-        margin-top: 50px;
+        margin-left: 200px;
     }
 }
