--- a/blocks/photo-grid/grid__item/grid__item.css
+++ b/blocks/photo-grid/grid__item/grid__item.css
@@ -1,13 +1,15 @@
 .grid__item{
-    width: 284px;
+    width: 100%
     height: 213px;
-    overflow: hidden;     
+    object-fit: cover;
+       
 }
 
 
 @media screen and (min-width: 320px) and (max-width: 767px){
     .grid__item{
-        width: 200px;
-        height: 130px;       
+        width: 400px;
+        height: 230px;     
+        align-items: center;  
     }
 }
