--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -1,6 +1,6 @@
 
 .photo-grid{  
-    height: 440px;
+   
     display: grid;
     grid-template-columns: repeat(4, auto); 
     grid-gap: 10px;
@@ -12,11 +12,13 @@
 @media screen and (min-width: 320px) and (max-width: 768px){
     .photo-grid{
         width: 100%;
-        height: 280px;
-        display: grid;
-        grid-template-columns: repeat(2, auto); 
-        grid-template-rows: repeat(2, auto);
+        display: grid;  
+        grid-template-columns: repeat(1, 1fr); 
+        grid-template-rows: repeat(6, 1fr);
         grid-gap: 10px;
-        margin-left: 570px;
+        margin-left: 50px;
+        justify-items: center;
+     
+       
     }
 }
