--- a/blocks/places/__place/__image/place__image.css
+++ b/blocks/places/__place/__image/place__image.css
@@ -1,13 +1,19 @@
 
-.place__image{
-    width: 460px;
-    height: 460px;        
+.place__image{        
     grid-column-start: 1;    
     grid-row-start: 2;
 }
 
+
+
 @media screen and (min-width: 320px) and (max-width: 768px){
+    img{
+        width: 400px;
+        height: 300px;
+         }
+  
     .place__image{
-        max-width: 769px;
-    }
+        grid-column-start: 1;
+      
+         }
 }
