--- a/blocks/places/__place/__subtitle/place__subtitle.css
+++ b/blocks/places/__place/__subtitle/place__subtitle.css
@@ -9,7 +9,7 @@
 .place__url-heading{
     color: #AAAAAA;
     font-size: 12px;
-    font-weight: 400px;       
+    font-weight: 400;       
 }
 
 .place__artist{
@@ -17,7 +17,11 @@
 }
 
 
-@media screen and (min-width: 320px) and (max-width: 767px){
+@media screen and (min-width: 320px) and (max-width: 768px){
 .place__subtitle{
-    padding-top: 180px;   }
+    padding-top: 180px; 
+    grid-column-start: 1;
+    grid-row-start: 3;
+
+}
 }
