--- a/blocks/places/__place/__text/place__text.css
+++ b/blocks/places/__place/__text/place__text.css
@@ -1,9 +1,8 @@
 .place__text{
-    width: 484px;
     grid-column-start: 2;
     grid-row-start: 2;
     grid-row-end: 4; 
-    padding-right: 200px;
+    
 }
 
 .place__paragraph{    
@@ -17,7 +16,9 @@
 
 @media screen and (min-width: 320px) and (max-width: 768px){
     .place__text{
-        width: 300px;
-        height: 400px;
+        grid-column-start: 1;
+        grid-column-end: 2;
+        grid-row-start: 4;
+        
     }
 }
