--- a/blocks/places/__place/__title/place__title.css
+++ b/blocks/places/__place/__title/place__title.css
@@ -5,7 +5,7 @@
     line-height: 76px;        
     grid-column-start: 1;    
     grid-row-start: 1;
-    width: 400px;    
+      
 }
 
 .place__title-usa{
@@ -13,11 +13,14 @@
     font-size: 72px;
     font-weight: 800;
     line-height: 76px;
-    width: 700px;
     grid-column-start: 1;
     grid-column-end: 3;
     grid-row-start: 1;    
-    
-    
-    
+          
+}
+
+@media screen and (min-width: 320px) and (max-width: 768px){
+    .place__title{
+        padding-top: 150px;
+    }
 }
