--- a/index.css
+++ b/index.css
@@ -26,6 +26,9 @@
 @import url(./blocks/places/__place/__text/place__text.css);
 @import url(./blocks/places/__place/__title/place__title.css);
 @import url(./blocks/places/__place/place.css);
+@import url(./blocks/places/places.css);
+
+
 
 @import url(./blocks/cover/cover.css);
 @import url(./blocks/cover/__background/cover__background.css);
@@ -40,8 +43,8 @@
 
 
 body {
-    display: flex;
     justify-content: center;
+    display: flex;
   
    
 }
